[gd_scene load_steps=14 format=3 uid="uid://bs88trqfh6iiv"]

[ext_resource type="Script" uid="uid://cc5ddk0mjexkq" path="res://scenes/Entities/spider.gd" id="1_e4mvx"]
[ext_resource type="Texture2D" uid="uid://0d8jjr4wwdug" path="res://Assets/sprites/Spider_Frames.png" id="1_vwpwm"]
[ext_resource type="Script" uid="uid://cuh7qyowkt7ol" path="res://scenes/Entities/hitbox.gd" id="3_o2it5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e4mvx"]
atlas = ExtResource("1_vwpwm")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2it5"]
atlas = ExtResource("1_vwpwm")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_74mbj"]
atlas = ExtResource("1_vwpwm")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt7ye"]
atlas = ExtResource("1_vwpwm")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_v170e"]
atlas = ExtResource("1_vwpwm")
region = Rect2(200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r4rg"]
atlas = ExtResource("1_vwpwm")
region = Rect2(250, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_js5b8"]
atlas = ExtResource("1_vwpwm")
region = Rect2(300, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkwuh"]
atlas = ExtResource("1_vwpwm")
region = Rect2(350, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_0qjla"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_e4mvx")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_o2it5")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_74mbj")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_qt7ye")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_v170e")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_5r4rg")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_js5b8")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_lkwuh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nmr4d"]
size = Vector2(15, 3)

[node name="Spider" type="CharacterBody2D"]
scale = Vector2(4, 4)
collision_layer = 2
script = ExtResource("1_e4mvx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_0qjla")
autoplay = "default"
frame = 2
frame_progress = 0.711619

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("3_o2it5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-2.5, 1.5)
shape = SubResource("RectangleShape2D_nmr4d")

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(-2.5, 3.75)
target_position = Vector2(0, 2.75)

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2(-2.5, -0.75)
target_position = Vector2(0, -2.75)

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
